--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.19",
+    "validator": "^13.15.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
